# toefl-ai-rater

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: pages.yml
docs/: architecture.md  demo.md  index.html
docs/spelling-notebook/: app.js  index.html  manifest.webmanifest  sw.js  words.js
examples/demo_output/: report.json  report.md
examples/sample_inputs/: README.md  speaking_q1.prompt.txt  speaking_q1.transcript.txt  writing_q1.prompt.txt  writing_q1.response.txt
scripts/: scan_repo.py
skills/toefl-ai-auditor/: SKILL.md
src/toefl_ai_rater/: __init__.py  cli.py  config.py  discovery.py  heuristics.py  models.py  prompts.py  reporting.py  scale.py  scanner.py
src/toefl_ai_rater/providers/: __init__.py  base.py  factory.py  local.py  openai_compatible.py
