[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toefl-ai-rater"
version = "0.1.0"
description = "Free local-first TOEFL speaking and writing AI scoring workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.32.0",
]

[project.scripts]
toefl-ai-rater = "toefl_ai_rater.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
